--- a/app/index.html
+++ b/app/index.html
@@ -88,6 +88,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/manager/survey-list.js"></script>
+        <script src="scripts/controllers/manager/add-survey.js"></script>
         <!-- endbuild -->
 </body>
 </html>
