--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,6 @@
     <link rel="stylesheet" href="bower_components/ng-grid/ng-grid.min.css" />
     <link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.css" />
     <link rel="stylesheet" href="bower_components/blueimp-file-upload/css/jquery.fileupload.css" />
-    <link rel="stylesheet" href="bower_components/blueimp-file-upload/css/jquery.fileupload-ui.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/main.css -->
@@ -80,6 +79,7 @@
     <script src="bower_components/blueimp-file-upload/js/jquery.fileupload-video.js"></script>
     <script src="bower_components/blueimp-file-upload/js/jquery.fileupload-angular.js"></script>
     <script src="bower_components/blueimp-file-upload/js/jquery.iframe-transport.js"></script>
+    <script src="bower_components/angular-ui-sortable/sortable.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
