--- a/app/index.html
+++ b/app/index.html
@@ -80,6 +80,8 @@
     <script src="bower_components/blueimp-file-upload/js/jquery.fileupload-angular.js"></script>
     <script src="bower_components/blueimp-file-upload/js/jquery.iframe-transport.js"></script>
     <script src="bower_components/angular-ui-sortable/sortable.js"></script>
+    <script src="bower_components/angular-wizard/dist/angular-wizard.js"></script>
+    <script src="bower_components/underscore/underscore.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
