--- a/app/index.html
+++ b/app/index.html
@@ -95,6 +95,7 @@
         <script src="scripts/controllers/response.js"></script>
        
         <script src="scripts/services/surveyprovier.js"></script>
+        <script src="scripts/controllers/preview.js"></script>
         <!-- endbuild -->
 </body>
 </html>
